fixed issue with spacing on nominee page

--- a/wp-content/themes/understrap/sass/theme/_theme.scss
+++ b/wp-content/themes/understrap/sass/theme/_theme.scss
@@ -1744,6 +1744,25 @@ position: absolute;
 .design-system-image--section{
   padding-top:100px;
   padding-bottom:100px;
+  .text-grid {
+      column-count: 2;
+      column-gap: 40px;
+      max-width: 710px;
+
+      @media (max-width: 1024px) {
+        column-count: 2;
+        column-gap: 20px;
+        height:100%;
+      }
+
+      @media (max-width: 768px) {
+        column-count: 1;
+      }
+
+      p {
+        padding-top:0 !important;
+      }
+    }
 
   img {
     width: 100%;
